# m2-projetsbse-erecruitement-cmr

./: .env.example  .gitignore  README.md  alembic.ini  dockerfile  erecruitement.db  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 19ac449bf2dd_new_migration.py  2e34883478df_fix_users_table.py  4d03329ba2ef_fix_users_table.py  5f5b4c503905_initial_tables.py  6dd59323964b_fix_users_table.py  7872634fbeff_new_migration.py  b390a37d9617_new_migration.py  c23e26abafc5_fix_users_table.py
app/: .env  main.py
app/models/: tout.txt
app/models/application/: application.py
app/models/candidates/: candidat.py
app/models/criteria/: criteria.py
app/models/cv/: cv.py
app/models/employer/: employer.py
app/models/job/: job.py
app/models/user/: user.py
app/routes/ahpag/: ag.py  ag_with_pygad.py  ahpAg.py  candidates.csv  test.json
app/services/: config.py  database.py  init_db.py  utils.py
data/: top_30_candidates.json  top_50_candidates.json  weights.json
tests/: preference.txt
with-django/: Dockerfile  README.md  docker-compose.yml  extraction.md  requirements.txt  test.py
with-django/applications/: admin.py  forms.py  models.py  urls.py  views.py
with-django/backend/: celery.py  settings.py  urls.py
with-django/jobs/: admin.py  ahp_utils.py  filters.py  forms.py  models.py  tasks.py  urls.py  views.py
with-django/notifications/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
with-django/templates/: base.html  bash.html
with-django/users/: admin.py  forms.py  models.py  urls.py  views.py
(+52 files in other folders)
